syntax = "proto3";
package epix.csr.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

option go_package = "github.com/EpixZone/epix/v8/x/csr/types";

// Params holds parameters for the csr module
message Params {
  option (amino.name) = "epix/x/csr/Params";

  // boolean to enable the csr module
  bool enable_csr = 1;
  // decimal to determine the transaction fee split between network operators
  // (validators) and CSR
  string csr_shares = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (amino.dont_omitempty) = true,
    (gogoproto.nullable) = false
  ];
}
